--- a/app/styles/general.scss
+++ b/app/styles/general.scss
@@ -17,12 +17,93 @@ header{
         list-style: none;
         li{
             margin-right: 0.6rem;
-           a{
-            color: white;
-            text-decoration: none;
-        
-           } 
+                       .link {
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+}
+
+.link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: width .3s;
+}
+
+.link:hover::after {
+    width: 100%;
+   
+}
     }
     }
 }
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    background-color:#202a39 ;
+    .links{
+        display: flex;
+        flex-direction: row;
+        ul{
+            margin: 2rem;
+            &:first-child{
+                margin-left: 0;
+            }
+            li{
+              
+                
+                list-style: none;
+                margin-bottom: 0.5rem;
+                .link {
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+}
+
+.link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: width .3s;
+}
+
+.link:hover::after {
+    width: 100%;
+   
+}
+              
+        }
+    }
+  
+}
+  hr{
+        color: white;
+        width: 100%;
+    }
+.socials{
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    justify-content: space-between;
+
+    div{
+        
+            
+
+    
+        color: white;
+    
+    img{
+        filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(350deg) brightness(103%) contrast(101%);
+        margin-right: 1rem;
+    }}
+
+
+}
+
 }
