--- a/app/styles/home/MangaSlider.scss
+++ b/app/styles/home/MangaSlider.scss
@@ -1,5 +1,7 @@
+$bgprimary : #ea3c55;
+
 .MangaSlider{
-   background-color: #ea3c55;
+   background-color: $bgprimary;
     padding: 3rem 1rem;
     margin-bottom: 3rem;
  .cards-container{
