--- a/app/styles/home/AnimeSlider.scss
+++ b/app/styles/home/AnimeSlider.scss
@@ -1,3 +1,5 @@
+$bgprimary : #ea3c55;
+
 .AnimeSlider{
     padding: 3rem 1rem;
  .cards-container{
@@ -15,7 +17,7 @@
         min-width:  20rem;
         border: solid 1px black;
         height: 25rem;
-        background-color: red;
+        background-color: #ea3c55;
     }}
  }
 
