Aggiunto un pattern nello sfondo

--- a/app/styles/general.scss
+++ b/app/styles/general.scss
@@ -3,6 +3,12 @@ $bgprimary : #ea3c55;
 .main-container{
     max-width: 1600px;
     margin: 0 auto;
+       background: url('../../public/patterns/mainpattern.svg');
+ background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+
 }
 body{
     margin: 0 auto;
