--- a/app/styles/home/search.scss
+++ b/app/styles/home/search.scss
@@ -4,6 +4,7 @@ color: white;
 display: flex;
 flex-direction: row;
  background-color:$bgprimary;
+ border-radius: 1rem;
 
 .anime{
     border-right: 1px solid white;
