--- a/app/styles/general.scss
+++ b/app/styles/general.scss
@@ -149,3 +149,24 @@ footer{
 }
 
 }
+
+
+.go-to-top{
+
+display: flex;
+ position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  border: solid 2px black;
+  background-color: $bgprimary;
+  border-radius: 1rem;
+img{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(355deg) brightness(104%) contrast(101%);
+}
+
+
+
+
+
+
+}
