--- a/app/styles/home/AnimeSlider.scss
+++ b/app/styles/home/AnimeSlider.scss
@@ -2,22 +2,48 @@ $bgprimary : #ea3c55;
 
 .AnimeSlider{
     padding: 3rem 1rem;
+    display: flex;
+    flex-direction: column;
+    .title {
+        
+        width: 100%;
+        display:flex ;
+        justify-content: center;
+        h1{
+        font-size: 2rem;
+    }}
+
  .cards-container{
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    justify-content: center;
+   
     flex-wrap: nowrap;
     div{
         display: flex;
         flex-direction: row;
    .card{
         display: flex;
+        flex-direction: column;
         margin: 0.4rem;
         min-width:  20rem;
-        border: solid 1px black;
+       align-items: center;
+       
+       padding: 0.4rem;
         height: 25rem;
         background-color: #ea3c55;
+        border-radius: 1rem;
+        img{
+            height: 8rem;
+            width: 7rem;
+            border-radius: 1rem;
+        }
+        span{
+            display: flex;
+           
+            margin-top: 1rem;
+            color: white;
+        }
     }}
  }
 
