--- a/app/styles/home/jumbo.scss
+++ b/app/styles/home/jumbo.scss
@@ -2,15 +2,20 @@
     display: flex;
     flex-direction: row;
     padding: 4rem 1rem;
+    
     div{
         width: 50vw;
         font-size: 1.3rem;
         
     }
     .img{
-        display: flex;
-        
+       
+        border-radius: 1rem;
         align-items: center;
         justify-content: center;
+        img{
+            border-radius: 1rem;
+            margin-left: 1rem;
+        }
     }
 }
