Aggiornato il font di upcoming slider

--- a/app/styles/home/UpcomingAnime.scss
+++ b/app/styles/home/UpcomingAnime.scss
@@ -17,8 +17,9 @@ $bgprimary : #ea3c55;
     align-items: center;
     flex-direction: column;
     h1{
-        font-size: 2rem;
+        font-size:4rem;
         color: white;
+        margin: 0;
     }
  }
  .cards-container{
