--- a/app/styles/general/searchPage.scss
+++ b/app/styles/general/searchPage.scss
@@ -1,7 +1,7 @@
 $bg-primary: #ea3c55;
 
 
-.search-anime{
+
    
     .search-title{
    width: 100%;
@@ -94,27 +94,30 @@ select{
 
 
 }
-.anime{
+.card-container{
     width: 100%;
-    background-color: #fe8081;
+   
     border-radius: 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
    
-    .card-anime{
-        background-color: #fff;
-        margin: 1rem;
-        width: 30%;
-        border: 1px solid $bg-primary;
-        display: flex;
-        flex-direction: column;
-        border-radius: 1rem;
-        padding: 3rem;
-        font-size: 1.2rem;
-        height: 38rem;
+   
+    .card{
+     border:#fe8081 solid 3px;
+    
+     display: flex;
+     flex-direction: row;
+     border-radius: 1rem;
+     padding: 1rem;
+     width: 100%;
+     margin: 0.4rem;
+     align-items: center;
+     .content{
+      display: flex;
+      flex-direction: column;
+      margin-left: 1rem;
+     }
         span{
             margin-bottom: 0.4rem;
         }
@@ -122,19 +125,14 @@ select{
             font-size: 1rem;
         } 
         .image{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        img{
-            width: 20%;
-            height: 80%;
-        }
+     height: 100%;
+        
     }
  
     }
 }
 
-}
+
 
 .error{
 
